# AntivirusDetection

./: .gitignore  Antivirus.py  CheckMalware.py  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
antivirus_detection/: __init__.py  cli.py  features.py  model.py
backend/app/: main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
scripts/legacy/: Antivirus.py  CheckMalware.py  Malware.py
tests/: test_scan.py
