[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antivirus-detection"
version = "1.0.0"
description = "Educational PE malware classifier demo with a FastAPI backend and React frontend."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Orrin Adotevi"}]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
  "pefile>=2023.2.7",
  "joblib>=1.3",
  "scikit-learn>=1.2",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.3",
  "black>=24.1",
]
train = [
  "pandas>=2.0",
]

[project.scripts]
avscan = "antivirus_detection.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["antivirus_detection"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
